# MORA

./: Cargo.toml  LICENSE.md  LRA  MORA  README.md  install.sh  taxonomy.sh  test.sam
config/: config.yaml
rules/: bowtie_index.rule  bowtie_mapping_pe.rule  bowtie_mapping_se.rule  minimap2_index.rule  minimap2_mapping_se.rule  puffer_index.rule  pufferfish_mappings.rule  pufferfish_mappings_se.rule  quantification.rule
sample/: test.sam
scripts/: accessions2taxids.py  taxonomy.sh
src/: assignment.rs  cedar.rs  main.rs
src/assignment/: get_taxonomy.rs  util.rs
src/cedar/: dump.rs  equivalence_class_builder.rs  readers.rs  set_covers.rs  stats.rs  taxa.rs  util.rs
